[tool.poetry]
name = "async-zip-files"
version = "0.1.0"
description = ""
authors = ["Gumerov Artur <2diver7@gmail.com>"]
readme = "README.md"
packages = [{include = "async_zip_files"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
